--- a/js-course/complete-javascript-course/01-Fundamentals-Part-1/starter/index.html
+++ b/js-course/complete-javascript-course/01-Fundamentals-Part-1/starter/index.html
@@ -22,10 +22,19 @@
         color: white;
       }
     </style>
+
+<!--    <script>-->
+<!--      let js = 'amazing';-->
+<!--      if(js==='amazing') alert('js is fun')-->
+
+<!--      console.log(40+8+3-2);-->
+<!--    </script>-->
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
 
-    <script></script>
+    <script src="script.js"></script>
+
+
   </body>
 </html>
