--- a/js-course/complete-javascript-course/03-Developer-Skills/starter/index.html
+++ b/js-course/complete-javascript-course/03-Developer-Skills/starter/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Developer Skills & Editor Setup</title>
     <style>
-      body {
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        background: linear-gradient(to top left, #28b487, #7dd56f);
-      }
+      /*body {*/
+      /*  height: 100vh;*/
+      /*  display: flex;*/
+      /*  align-items: center;*/
+      /*  background: linear-gradient(to top left, #28b487, #7dd56f);*/
+      /*}*/
       h1 {
         font-family: sans-serif;
         font-size: 50px;
@@ -25,6 +25,27 @@
   </head>
   <body>
     <h1>Developer Skills & Editor Setup</h1>
+    <p class="first">
+      learn it,html contains head and body, describing the contens on the web page
+      hyper text mark up language You can view <a href="http://localhost:8080">my github</a> here.
+    </p>
+    <h2>test</h2>
+    <p class="second">
+      just another paragraph
+    </p>
     <script src="script.js"></script>
+
+    <img id="course-image" src=""/>
+
+    // form is meaning ful than div
+    <form id="your-name">
+      <h2>your name</h2>
+      <p>plz fill out this form</p>
+
+      <input type="text" placeholder="your name plz">
+      <button>OK!</button>
+    </form>
+
   </body>
 </html>
+!
