--- a/js-course/complete-javascript-course/03-Developer-Skills/starter/index.html
+++ b/js-course/complete-javascript-course/03-Developer-Skills/starter/index.html
@@ -4,24 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <link href="style.css" rel="stylesheet">
     <title>Developer Skills & Editor Setup</title>
-    <style>
-      /*body {*/
-      /*  height: 100vh;*/
-      /*  display: flex;*/
-      /*  align-items: center;*/
-      /*  background: linear-gradient(to top left, #28b487, #7dd56f);*/
-      /*}*/
-      h1 {
-        font-family: sans-serif;
-        font-size: 50px;
-        line-height: 1.3;
-        width: 100%;
-        padding: 30px;
-        text-align: center;
-        color: white;
-      }
-    </style>
+
   </head>
   <body>
     <h1>Developer Skills & Editor Setup</h1>
@@ -37,10 +23,10 @@
 
     <img id="course-image" src=""/>
 
-    // form is meaning ful than div
+    // form is more meaning ful than div because seo
     <form id="your-name">
       <h2>your name</h2>
-      <p>plz fill out this form</p>
+      <p class="first"> plz fill out this form</p>
 
       <input type="text" placeholder="your name plz">
       <button>OK!</button>
@@ -48,4 +34,4 @@
 
   </body>
 </html>
-!
+
